# TINTOlib

./: .gitignore  Classification_CNN.ipynb  Gemfile  README.md  TINTOlib_testing.ipynb  TINTOlib_testing_CNN+MLP.ipynb  TINTOlib_testing_CNN.ipynb  TINTOlib_testing_ViT.ipynb  bugs.txt  literatura and FW.txt  literatura.txt  pyproject.toml  requirements-example.txt  requirements.txt
Datasets/: HOMA.csv  normalized_padel_feats_NCI60_672_small.csv
Jupyters/: CNN-from-TINTO.ipynb  atl-censustract-regression.ipynb  notas.txt
Notebooks -  Examples/: Binary_hybrid_network.ipynb  Multiclass_hybrid_network.ipynb  README.md
Notebooks -  Keras/: Regression_hybrid_network.ipynb
Notebooks_Keras/: Binary_hybrid_network.ipynb  Classification_CNN.ipynb
Notebooks_PyTorch/: Classification_CNN_New.ipynb
TINTOlib/: abstractImageMethod.py  barGraph.py  base.py  bie.py  clusters.py  combination.py  deepInsight.py  distanceMatrix.py  featureWrap.py  fotomics.py  igtd.py  mappingMethod.py  multiTransformer.py  paramImageMethod.py  refined.py  supertml.py  tinto.py
data2Image/: SuperTML.py  base.py  combination.py  distanceMatrix.py  equibargraph.py  igtd.py  methods.py  models.py  refined.py  supertml.py  tinto.py
docs/: _config.yml  binary.md  index.md  multiclass.md  regression.md
examples/: Pytorch_Regression-ViT.ipynb  Pytorch_Regression-ViT.py  Pytorch_Regression_HyViT.ipynb  Tensorflow_Classification_CNN.ipynb  Tensorlflow_Multiclass_HyCNN.ipynb
notebooks/: Classification_CNN.ipynb  Classification_hybrid_network.ipynb  Keras_TINTOlib_hybrid_classification.ipynb  (+6 more)
(+234 files in other folders)
