[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TINTOlib"
version = "1.1.0"
authors = [
    { name="BorjaRei", email="borjareinoso@gmail.com" },
    { name= "manwestc", email="jcastillo@fi.upm.es"},
    { name= "DavidGonzalezFernandez", email="david.g.f.2@gmail.com"},
    { name= "JiayunLiu", email="jiayun.liu@upm.es"},
    { name="JavierLopez", email="javilecrin19@gmail.com"}
]
description = "Converting tabular data into images"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "bitstring==4.3.0",
    "matplotlib==3.9.4",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "opencv-python==4.11.0.86",
    "scipy==1.15.0",
    "tqdm==4.67.1",
    "asymmetric-greedy-search==0.1.0",
    "numba==0.62.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/oeg-upm/TINTOlib-Documentation"

[tool.hatch.build.targets.wheel]
packages = ["TINTOlib"]